--- a/connections/latex/connections_talk.tex
+++ b/connections/latex/connections_talk.tex
@@ -1,131 +1,7 @@
 \documentclass[12pt]{article}
+\usepackage{greg}
 
-\usepackage[margin=1in]{geometry}
-\usepackage[utf8]{inputenc}
-\usepackage{amsfonts}
-\usepackage{amsmath}
-\usepackage{amsthm}
-\usepackage{tikz-cd}
-% tipa is redefining the semicolon and bang
-\let\semicolon\;
-\let\bang\!
-\usepackage{tipa} % IPA symbols for shape modality \textesh
-% tipa is redefining the semicolon and bang
-\let\;\semicolon
-\let\!\bang
-\usepackage{graphicx}
-\usepackage{float}
-\usepackage{hyperref}
-\usepackage[numbers]{natbib}
-\usepackage{parskip} % removes paragraph indent, adds vertical space
-\usepackage{quiver}
-\usepackage{mathtools}
-\usepackage{tcolorbox}
-
-
-\graphicspath{ {./img/} }
-
-\bibliographystyle{IEEEtran} % shows URL
-\setcitestyle{square,numbers}
-
-%%% Common categories
-\newcommand{\tp}{\;\mathrm{type}}
-\newcommand{\Hom}{\mathrm{Hom}}
-\newcommand{\G}{\Gamma}
-\newcommand{\pit}[1]{\prod_{(#1)}} % pi-type
-\newcommand{\pitxa}{\pit{x:A}}
-\newcommand{\sit}[1]{\sum_{(#1)}} % sigma-type
-\newcommand{\ent}{\vdash}
-\newcommand{\adj}{\dashv}
-\newcommand{\refl}{\ensuremath{\textsf{refl}}}
-\newcommand{\ap}{\ensuremath{\textsf{ap}}}
-\newcommand{\ind}{\ensuremath{\textsf{ind}}}
-\newcommand{\lift}{\ensuremath{\textsf{lift}}}
-\newcommand{\inv}{\ensuremath{\textsf{inv}}}
-\newcommand{\concat}{\ensuremath{\textsf{concat}}}
-\newcommand{\transport}{\ensuremath{\textsf{transport}}}
-\renewcommand{\sec}{\ensuremath{\textsf{sec}}}
-\newcommand{\retr}{\ensuremath{\textsf{retr}}}
-\newcommand{\total}{\ensuremath{\textsf{total}}}
-\newcommand{\isequiv}{\ensuremath{\textsf{is\_equiv}}}
-\newcommand{\fib}{\ensuremath{\textsf{fib}}}
-\newcommand{\id}{\ensuremath{\text{id}}}
-\newcommand{\judgeq}{\ensuremath{:\equiv}}
-\newcommand{\reflfx}{\ensuremath{\refl_{f(x)}}}
-\newcommand{\pathm}{\ensuremath{\mathcal{P}_1 (M)}}
-\newcommand{\pp}{\ensuremath{\mathcal{P}_1}}
-
-\newcommand{\rr}{\ensuremath{\mathbb{R}}}
-\newcommand{\rrn}{\ensuremath{\mathbb{R}^n}}
-\newcommand{\rrm}{\ensuremath{\mathbb{R}^m}}
-\newcommand{\rrx}{\ensuremath{\mathbb{R}[x]/x^2}}
-\newcommand{\rry}{\ensuremath{\mathbb{R}[y]/y^2}}
-\newcommand{\cc}{\ensuremath{\mathbb{C}}}
-\newcommand{\nn}{\ensuremath{\mathbb{N}}}
-\newcommand{\dd}{\ensuremath{\mathbb{D}}}
-\newcommand{\vv}{\ensuremath{\mathbb{V}}}
-\newcommand{\cinfty}{\ensuremath{C^{\infty}}}
-\newcommand{\smfd}{\textsf{SmoothMfd}}
-\newcommand{\calg}{\textsf{CAlg}_{\rr}}
-\newcommand{\cart}{\textsf{CartSp}}
-\newcommand{\formalcart}{\textsf{FormalCartSp}}
-\newcommand{\formalsmoothset}{\textsf{FormalSmoothSet}}
-\newcommand{\smoothset}{\textsf{SmoothSet}}
-\newcommand{\setcat}{\textsf{Set}}
-\newcommand{\psh}[1]{\textsf{Psh}(#1)}
-\newcommand{\sh}[1]{\textsf{Sh}(#1)}
-\newcommand{\pshcart}{\psh{\cart}}
-\newcommand{\rmodal}{\Re}
-\newcommand{\imodal}{\Im}
-\newcommand{\shape}{\ensuremath{\text{\textesh}}}
-\newcommand{\op}[1]{#1^{\textsf{op}}}
-\newcommand{\pt}{\mathrm{pt}}
-\newcommand{\Aut}{\mathrm{Aut}}
-\newcommand{\BAut}{\mathrm{BAut}}
-\newcommand{\im}{\mathrm{im}}
-\newcommand{\Fin}{\mathrm{Fin}}
-\newcommand{\Type}{\mathrm{Type}}
-\newcommand{\pinv}{p^{-1}}
-\newcommand{\aut}{\mathrm{Aut}}
-\newcommand{\diffeo}{\mathrm{Diffeo}}
-\newcommand{\ad}{\mathrm{ad}}
-\newcommand{\Ad}{\mathrm{Ad}}
-
-\newcommand{\bg}{\ensuremath{\textbf{B}G}}
-\newcommand{\bgconn}{\ensuremath{\textbf{B}G_{\textsf{conn}}}}
-\newcommand{\bgdiff}{\ensuremath{\textbf{B}G_{\textsf{diff}}}}
-\makeatletter
-\newcommand*{\doublerightarrow}[2]{\mathrel{
-  \settowidth{\@tempdima}{$\scriptstyle#1$}
-  \settowidth{\@tempdimb}{$\scriptstyle#2$}
-  \ifdim\@tempdimb>\@tempdima \@tempdima=\@tempdimb\fi
-  \mathop{\vcenter{
-    \offinterlineskip\ialign{\hbox to\dimexpr\@tempdima+1em{##}\cr
-    \rightarrowfill\cr\noalign{\kern.5ex}
-    \rightarrowfill\cr}}}\limits^{#1}_{#2}}}
-\newcommand*{\triplerightarrow}[1]{\mathrel{
-  \settowidth{\@tempdima}{$\scriptstyle#1$}
-  \mathop{\vcenter{
-    \offinterlineskip\ialign{\hbox to\dimexpr\@tempdima+1em{##}\cr
-    \rightarrowfill\cr\noalign{\kern.5ex}
-    \rightarrowfill\cr\noalign{\kern.5ex}
-    \rightarrowfill\cr}}}\limits^{#1}}}
-\makeatother
-\newcommand{\doublearrow}{\rightrightarrows}
-
-\newcommand{\gc}[1]{\marginpar{\bf $\leftarrow$ {#1}}}
-\newcommand{\commentout}[1]{}
-\newcommand{\image}{\mathrm{Image}}
-\newcommand{\myfig}[2]{\begin{figure}[ht]\caption{#1}\centering\includegraphics[width=0.6\textwidth]{#2}\end{figure}}
-%\newcommand{\gc}[1]{}
-
-\newtheorem{mydef}{Definition}
-\newtheorem{mythm}{Theorem}
-\newtheorem{mylemma}{Lemma}
-\newtheorem{myprop}{Proposition}
-\newtheorem{myclaim}{Claim}
-
-\title{Connections on principal bundles}
+\title{Connections on a principal bundles}
 \author{Greg Langmead}
 
 \begin{document}
@@ -139,27 +15,14 @@ If you are interested in these notes but worry about whether you have the prereq
 
 If, like me, you do even better with recorded lectures, I strongly recommend the playlist of lectures by Frederic Schuller \cite{schullerYoutube2015}. His course is efficient but very precise, and he is a great teacher who offers helpful intuition along the way. The scope is similar to the book by Baez and Muniain: he begins with topology and manifolds, defines connections and curvature, and then gets into physics.
 
-The most complete treatment, with the most proofs, is found in Kobayashi and Nomizu's text \cite{kobayashinomizu}, Volume 1. I'm cautiously optimistict that much of Kobayashi-Nomizu is treated a little more clearly and cleanly in a more recent book by Hamilton \cite{hamilton2017}.
-
-We will make a beeline for gauge theory, passing through terrorities that you may need to go deeper into to understand the beeline. Those are:
-\begin{enumerate}
-    \item Smooth manifolds
-    \item Tangent bundles and differential forms
-    \item Fiber bundles
-    \item Lie groups
-    \item Principal bundles
-    \item Connections
-    \item Holonomy
-    \item Curvature
-    \item And finally, gauge theory
-\end{enumerate}
+A very complete treatment, with the most proofs, is found in Kobayashi and Nomizu's text \cite{kobayashinomizu}, Volume 1. Lastly, I'm cautiously optimistict that much of the material is treated clearly and cleanly in a more recent book by Hamilton \cite{hamilton2017}.
 
 \section{Geometric intuition}
-The 20th century method of capturing curvature is in the following figure, where we slide a tangent vector around a loop on a curved surface.
+The 20th century method of capturing curvature is to imagine sliding a tangent vector around a loop on a curved surface.
 
 \myfig{Alexandru Scorpan, ``The Wild World of Four-Manifolds'', 2015 \cite{scorpan_wild_2005}}{scorpan_sphere}
 
-The embedding has selected a metric on S2, pulled back from R3. A metric is more strictly structure than a connection. A connection captures this notion of transport without a full metric.
+This is a picture of a specific embedding, which has selected a metric on S2, pulled back from R3. A metric is actually a little more structure than a connection. A connection captures this notion of transport without a full metric, but the picture is still useful.
 
 A Rubik's Cube is a discrete version of the sphere, and a discrete version of curvature arises. You can cause pieces to rotate by sending them away by a certain path and bringing them back by another.
 
@@ -477,6 +340,13 @@ KN Theorem 8.1: Under the same hypotheses as Theorem 4.2, let $\Omega$ be the cu
 KN Theorem 7.1 (Reduction theorem): Under the same hypotheses as Theorem 8.1, $P(u)$ is a reduced bundle with structure group $\Phi(u)$, and the connection is reducible to a connection in $P(u)$.
 
 KN Lemma during the proof of Theorem 7.1: Let $Q$ be a subset of $P(M, G)$ and $H$ a Lie subgroup of $G$. Assume: (1) the projection $p: P \to M$ maps $Q$ onto $M$; (2) $Q$ is stable by $H$, i.e., $R_a(Q) = Q$ for each $a\in H$; (3) if $u,v\in Q$ and $p(u) = p(v)$, then there is an element $a\in H$ such that $v = ua$; and (4) every point $x$ of $M$ has a neighborhood $U$ and a cross section $\sigma: U \to P$. such that $\sigma(U) \subset Q$. Then $Q(M, H)$ ts a reduced subbundle of $P(M, G)$.
+
+The reduction theorem can be used to show that equivalence classes of connections do not form a sheaf. See Freed-Hopkins for an example where the base is $S^1$. In a local trivialization the connection is flat, hence the reduction theorem tells us that we can reduce it to a trivial connection. This reduction can be witnessed by a gauge transformation \gc{oops, why?} and so we can glue two representatives of a trivial connection to a nontrivial connection on all of $S^1$.
+
+\section{Principal bundles in HoTT}
+We adopt the HoTT perspective on higher groups as pointed connected types. The group $G$ is installed as the loop group at the base point of $BG$. This space $BG$ already has the properties of the classical classifying space of $G$.
+
+Given a map $X\to BG$, how do we connect back to a locally trivial bundle structure?
 
 \bibliography{connections}
 \end{document}
