--- a/geometry/connections.bib
+++ b/geometry/connections.bib
@@ -178,3 +178,14 @@ a kind of cohesive motives.},
   year={2017},
   publisher={Springer International Publishing}
 }
+@misc{charted_space,
+    title = {Mathlib charted space},
+    url = {{https://github.com/leanprover-community/mathlib/blob/cd6f2720b829061d9f01a2ee7bf4bc6ef53fedde/src/geometry/manifold/charted\_space.lean}}
+}
+@Book{hottbook,
+  author =    {The {Univalent Foundations Program}},
+  title =     {Homotopy Type Theory: Univalent Foundations of Mathematics},
+  publisher = {\url{https://homotopytypetheory.org/book}},
+  address =   {Institute for Advanced Study},
+  year =      2013
+}
